--- a/Machine Learning Projects/Readme
+++ b/Machine Learning Projects/Readme
@@ -2,3 +2,4 @@
 ----------All the Machine Learning Projects ---------
 
 1. Bike Sharing Assigment using Linear Regression
+2. Linear Regression on New Insurance Dataset
