--- a/Machine Learning Projects/Readme
+++ b/Machine Learning Projects/Readme
@@ -3,3 +3,4 @@
 
 1. Bike Sharing Assigment using Linear Regression
 2. Linear Regression on New Insurance Dataset
+3. Logistic Regression on Lead Scoring Dataset
