--- a/Tableau Projects/Netflix Dashboard/Readme
+++ b/Tableau Projects/Netflix Dashboard/Readme
@@ -1,1 +1,4 @@
 Dashboard Link-https://public.tableau.com/app/profile/jitu.moni.das/viz/MinimalDashboardonNetflixDataset/Dashboard1?publish=yes
+
+
+![Dashboard](https://user-images.githubusercontent.com/105377777/198337704-30a3c20d-d894-46b0-b466-9bdacf478367.png)
